kubernetes/apps/auth/authentik/networkpolicys/auth-authentik-server-allow-ig-from-envoy-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-authentik-server-allow-ig-from-envoy-gateway
  namespace: auth
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              name: envoy
              component: proxy
              managed-by: envoy-gateway
      ports:
        - protocol: TCP
          port: 9000
