kubernetes/apps/auth/authentik/networkpolicys/auth-authentik-server-allow-ig-from-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-authentik-server-allow-ig-from-prometheus
  namespace: auth
spec:
  podSelector:
    matchLabels:
      name: authentik
      component: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 9300
